updated things to better fit mobile

--- a/contact.html
+++ b/contact.html
@@ -38,14 +38,17 @@
     <main class="main-content">
         <br>
         <h2>Let’s make something great together!</h2>
-        <p style="max-width: 40vw;">
+        <p>
             I’m currently open to new projects and commissions.<br>
             Reach out—I'd love to hear from you!
         </p>
 
         <div class="contact-container">
-            <div class="form-section">
 
+            <div class="photo-container">
+                <img src="images/headshot1.JPG" alt="Photo of Lexi" class="home-photo" />
+            </div>
+            <div class="form-section">
                 <form action="https://formspree.io/f/xovdwzqe" method="POST">
                     <div class="name-fields">
                         <div class="input-group">
@@ -74,10 +77,8 @@
                     <button type="submit">SEND MESSAGE</button>
                 </form>
             </div>
-        </div>
 
-        <div class="photo-container">
-            <img src="images/headshot1.JPG" alt="Photo of Lexi" class="home-photo" style="max-width: 400px;" />
+            
         </div>
     </main>
 
@@ -89,11 +90,10 @@
     <div class="divider-line"></div>
 
     <footer>
-        &copy; 2025 Lexi Randt. All rights reserved.
+        &copy; 2025 Lexi. All rights reserved.
     </footer>
 
-
-
 </body>
+
 
 </html>
