--- a/graphic-design.html
+++ b/graphic-design.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lexi Randt - Digital Art & Graphic Design</title>
+    <title>Lexi Randt - Graphic Design & Digital Art</title>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="css/navbar.css" />
     <link rel="stylesheet" href="css/main.css" />
@@ -35,7 +35,7 @@
     </nav>
 
     <div class="main">
-        <h1>Digital Art & Graphic Design</h1>
+        <h1>Graphic Design & Digital Art</h1>
         <p>
             Here is a collection of some course projects and personal work.
         </p>
