updated site 7/16 [graphic design, photography and fine art pages]. (still in progress)

--- a/alexcarnival.html
+++ b/alexcarnival.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lexi Randt - Alex & Carnival</title>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="css/navbar.css" />
     <link rel="stylesheet" href="css/main.css" />
 </head>
@@ -37,7 +38,7 @@
     <div class="main">
 
         <h1>Alex & Carnival Brand Guidelines</h1>
-        <h2>Summer 2025 personal project.</h2>
+        <p>This is a personal project I made over the Summer of 2025!</p>
 
         <div class="pdf-container">
             <iframe src="images/acbg.pdf" type="application/pdf" frameborder="0"></iframe>
