--- a/photography.html
+++ b/photography.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lexi Randt - Photography</title>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="css/navbar.css" />
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/photo.css" />
@@ -94,48 +95,49 @@
 
 
         <h2>Black & White</h2>
+        <br>
         <h3><em>Photos from my travels:</em></h3>
         <div class="photo-gallery">
             <figure>
-                <img src="images/photo/bw/mexico-3-23-22.jpeg" alt="Portrait of a student in natural light">
-                <figcaption> </figcaption>
-                <img src="images/photo/bw/Kujalleq-7-8-23.jpeg" alt="Portrait of a student in natural light">
-                <figcaption> </figcaption>
-                <img src="images/photo/bw/Isafjorour2-7-6-23.jpeg" alt="Portrait of a student in natural light">
-                <figcaption> </figcaption>
-                <img src="images/photo/bw/Greenland-iceburg-7-8-23.jpeg" alt="Portrait of a student in natural light">
-                <figcaption> </figcaption>
-                <img src="images/photo/stairs/stairs16.jpg" alt="Portrait of a student in natural light">
-                <figcaption> </figcaption>
+                <img src="images/photo/bw/mexico-3-23-22.jpeg" alt="Photo by Lexi Randt">
+                <figcaption><em>Mexico 3/22</em></figcaption>
+                <img src="images/photo/bw/Kujalleq-7-8-23.jpeg" alt="Photo by Lexi Randt">
+                <figcaption> <em>Kujalleq 7/23</em></figcaption>
+                <img src="images/photo/bw/Isafjorour2-7-6-23.jpeg" alt="Photo by Lexi Randt">
+                <figcaption> <em>Isafjorour 7/23</em></figcaption>
+                <img src="images/photo/bw/Greenland-iceburg-7-8-23.jpeg" alt="Photo by Lexi Randt">
+                <figcaption> <em>Greenland Iceburg 7/23</em></figcaption>
+                <img src="images/photo/stairs/stairs16.jpg" alt="Photo by Lexi Randt">
+                <figcaption> <em>Million Dollar Staircase</em></figcaption>
             </figure>
             <figure>
                 <img src="images/photo/bw/mountaineers-cemetery-zermatt-3-16-23.jpeg"
-                    alt="Portrait of a student in natural light">
-                <figcaption> </figcaption>
+                    alt="Photo by Lexi Randt">
+                <figcaption> Mountaineer's Cemetary, Zermatt 3/23</figcaption>
                 <img src="images/photo/bw/gateway-arch-national-park2-16-21.jpeg"
-                    alt="Portrait of a student in natural light">
-                <figcaption> </figcaption>
-                <img src="images/photo/bw/iceland-7-6-23.jpeg" alt="Portrait of a student in natural light">
-                <figcaption> </figcaption>
+                    alt="Photo by Lexi Randt">
+                <figcaption> Gateway Arch 2/21</figcaption>
+                <img src="images/photo/bw/iceland-7-6-23.jpeg" alt="Photo by Lexi Randt">
+                <figcaption> Iceland Mountain 7/23</figcaption>
                 <img src="images/photo/bw/Veytaux-Municipality-Switzerland-3-19-23.jpeg"
-                    alt="Portrait of a student in natural light">
-                <figcaption> </figcaption>
+                    alt="Photo by Lexi Randt">
+                <figcaption> Veytaux Municipality, Switzerland 3/23</figcaption>
 
-                <img src="images/photo/bw/horse.heic" alt="Portrait of a student in natural light">
-                <figcaption> </figcaption>
+                <img src="images/photo/bw/horse.heic" alt="Photo by Lexi Randt">
+                <figcaption> Albany, NY</figcaption>
 
             </figure>
 
             <figure>
-                <img src="images/photo/bw/Fossholl-Iceland-7-5-23.jpeg" alt="Portrait of a student in natural light">
-                <figcaption> </figcaption>
-                <img src="images/photo/bw/iceland-7-3-23.jpeg" alt="Portrait of a student in natural light">
-                <figcaption> </figcaption>
+                <img src="images/photo/bw/Fossholl-Iceland-7-5-23.jpeg" alt="Photo by Lexi Randt">
+                <figcaption> Fossholl, Iceland 7/23</figcaption>
+                <img src="images/photo/bw/iceland-7-3-23.jpeg" alt="Photo by Lexi Randt">
+                <figcaption> Iceland 7/23</figcaption>
                 <img src="images/photo/bw/Gries-im-Sellrain-Austria-2-20-24.jpeg"
-                    alt="Portrait of a student in natural light">
-                <figcaption> </figcaption>
-                <img src="images/photo/bw/Kematen-Austria-2-2-24.jpeg" alt="Portrait of a student in natural light">
-                <figcaption> </figcaption>
+                    alt="Photo by Lexi Randt">
+                <figcaption> Gries im Sellrain, Austria 2/24</figcaption>
+                <img src="images/photo/bw/Kematen-Austria-2-2-24.jpeg" alt="Photo by Lexi Randt">
+                <figcaption> Kematen, Austria 2/24</figcaption>
 
             </figure>
 
@@ -145,7 +147,8 @@
         <hr class="section-divider">
 
         <h2>"Campus"</h2>
-        <h3><em>Spring 2024 Digital Photography</em></h3>
+        <br>
+        <h3>Experimental Photography Series | <em>Spring 2024 Digital Photography</em></h3>
         <div class="photo-gallery">
             <div class="photo-gallery">
                 <figure>
@@ -174,7 +177,8 @@
         <hr class="section-divider">
 
         <h2>"Otherwordly Flora"</h2>
-        <h3><em>Spring 2025 Advanced Digital Photography</em></h3>
+        <br>
+        <h3>Experimental Photography Series | <em>Spring 2025 Advanced Digital Photography</em></h3>
         <div class="photo-gallery">
             <div class="photo-gallery">
                 <figure>
@@ -210,6 +214,7 @@
         <hr class="section-divider">
 
         <h2>"Through My Eyes"</h2>
+        <br>
         <h3><em>Spring 2025 Advanced Digital Photography Strobe Project</em></h3>
         <div class="photo-gallery">
             <div class="photo-gallery">
@@ -446,6 +451,7 @@
 
 
 
+        <a href="#" class="back-to-top">↑ Back to Top</a>
     </div>
 
     <footer>
