--- a/pocket-heroes.html
+++ b/pocket-heroes.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lexi Randt - Pocket Heroes</title>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="css/navbar.css" />
     <link rel="stylesheet" href="css/main.css" />
 </head>
@@ -35,7 +36,8 @@
     </nav>
 
     <div class="main">
-        <h2>Spring 2025: Graphic Design Course</h2>
+        <h2>Spring 2025 Graphic Design Course</h2>
+        <br>
         <p>
             Over the semester, I created a concept company called Pocket Heroes and developed its full brand identity.
             This included designing the logo, choosing typography, creating mockups, and putting together the final
