--- a/symposium.html
+++ b/symposium.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lexi Randt - Laudato Si</title>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="css/navbar.css" />
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/photo.css" />
@@ -33,6 +34,13 @@
             <a href="contact.html">Contact</a>
         </div>
     </nav>
+
+    <section class="hero">
+        <img src="images/ls-center.jpeg" alt="Whale with Shell">
+        <div class="hero-overlay">
+            <h1 class="hero-title">Laudato Si'</h1>
+        </div>
+    </section>
 
     <div class="main">
         <h2>Fall 2024 Symposium on Integral Ecology</h2>
