--- a/fine-art.html
+++ b/fine-art.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lexi Randt - Fine Art</title>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="css/navbar.css" />
     <link rel="stylesheet" href="css/main.css" />
 </head>
@@ -38,8 +39,14 @@
         </div>
     </nav>
 
+    <section class="hero">
+        <img src="images/fine-art/pink-beach.jpg" alt="Painting of beach with pink sand by Lexi Randt">
+        <div class="hero-overlay">
+            <h1 class="hero-title">Fine Art</h1>
+        </div>
+    </section>
+
     <div class="main">
-        <h2>Fine Art</h2>
         <p>
             Here is a collection of some course projects and personal work.
         </p>
@@ -49,6 +56,11 @@
             <div class="media-block">
                 <img class="lightbox-trigger" src="images/circus.jpeg" alt="Electric Circus - Bad Suns" />
                 <p><b>"Electric Circus" - Bad Suns</b><br><em>Mixed Media on Matte Poster Paper, 14x18"</em><br>2024</p>
+            </div>
+
+            <div class="media-block">
+                <img class="lightbox-trigger" src="images/fine-art/beach-painting.jpg" alt="Pink Beach Painting" />
+                <p><b>Pink Sand</b><br><em>Acrylic on Canvas</em><br>2023</p>
             </div>
 
             <hr class="section-divider">
@@ -116,6 +128,7 @@
             <!-- Repeat as needed -->
         </section>
 
+        <a href="#" class="back-to-top">↑ Back to Top</a>
     </div>
 
     <footer>
