--- a/graphic-design.html
+++ b/graphic-design.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lexi Randt - Graphic Design & Digital Art</title>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="css/navbar.css" />
     <link rel="stylesheet" href="css/main.css" />
+
 </head>
 
 <body>
@@ -20,7 +22,7 @@
             <a href="index.html">Home</a>
             <a href="resume.html">Resume</a>
             <div class="dropdown">
-                <a href="#" class="dropbtn, active">Portfolio</a>
+                <a href="#" class="dropbtn active">Portfolio</a>
                 <div class="dropdown-content">
                     <a href="photography.html">Photography</a>
                     <a href="graphic-design.html" class="active">Graphic Design</a>
@@ -34,19 +36,40 @@
         </div>
     </nav>
 
+    <section class="hero">
+        <img src="images/design/turtle-whale.jpg" alt="Whale with Shell">
+        <div class="hero-overlay">
+            <h1 class="hero-title">Graphic Design & Digital Art</h1>
+        </div>
+    </section>
+
     <div class="main">
-        <h1>Graphic Design & Digital Art</h1>
         <p>
-            Here is a collection of some course projects and personal work.
+            Here is a collection of personal work and multimedia college course projects.
+            <br>
+            <em>Click any image to view full screen.</em>
         </p>
 
         <section class="media-gallery-centered">
 
+            <div class="media-block">
+                <img src="images/design/wild-leaf.jpg" alt="Wilf Leaf Co." />
+                <p><b>Wild Leaf Co. Logo Design</b> <br>Summer 2025 personal project <br><em>Made using Figma</em></p>
+            </div>
 
+            <hr class="section-divider">
+            
             <div class="media-block">
                 <img src="images/design/carmen-fd.png" alt="Carmen Fire Department Duck Design" />
                 <p><b>Carmen Fire Department Duck</b><br><em>Independent study, commissioned for a fire truck due in
                         2026</em><br><span class="caption-meta">2022 · Made with Procreate</span></p>
+            </div>
+
+            <hr class="section-divider">
+
+            <div class="media-block">
+                <img src="images/design/Sebastian.jpg" alt="Sebastian 06/25" class="vertical" />
+                <p><b>Sebastian </b><br>Digital Drawing - 2025<br><em>Made using Procreate</em></p>
             </div>
 
             <hr class="section-divider">
@@ -87,7 +110,8 @@
 
             <div class="media-block">
                 <img src="images/jar.jpg" alt="Nogira's Pumpkin Pepper Sauce Logo" />
-                <p><b>Nogira's Pumpkin Pepper Sauce Logo</b> <br>Digital Art & Design course<br><span class="caption-meta">2024 · Made with Adobe Illustrator</span></p>
+                <p><b>Nogira's Pumpkin Pepper Sauce Logo</b> <br>Digital Art & Design course<br><span
+                        class="caption-meta">2024 · Made with Adobe Illustrator</span></p>
             </div>
 
             <hr class="section-divider">
@@ -126,23 +150,9 @@
             <hr class="section-divider">
 
             <div class="media-block">
-                <img src="images/design/wild-leaf.jpg" alt="Wilf Leaf Co." />
-                <p><b>Wild Leaf Co. Logo Design</b> <br>Summer 2025 personal project <br><em>Made using Figma</em></p>
-            </div>
-
-            <hr class="section-divider">
-
-            <div class="media-block">
                 <img src="images/design/margot-robbie.PNG" alt="Margot Robbie" />
                 <p><b>Margot Robbie</b> <br>2022 Graphic Design Project <br><em>Made using Adobe
                         Illustrator</em></p>
-            </div>
-
-            <hr class="section-divider">
-
-            <div class="media-block">
-                <img src="images/design/Sebastian.jpg" alt="Sebastian 06/25" class="vertical" />
-                <p><b>Sebastian </b><br>Digital Drawing - 2025<br><em>Made using Procreate</em></p>
             </div>
 
             <hr class="section-divider">
@@ -165,63 +175,47 @@
             <!-- Repeat as needed -->
         </section>
 
-        <!-- <section class="media-gallery">
 
-            <div class="media-row">
-                <div class="media-item">
-                    <img src="images/design/initials.jpeg" alt="Initial Logos" />
-                    <p><b>9 logos made from my initials, each with a different mood</b><br>(Spring 2025 Graphic Design class project)<br><em>Made using Adobe Illustrator</em></p>
-                </div>
-                <div class="media-item">
-                    <img src="images/jar.jpg" alt="Nogira's Pumpkin Pepper Sauce Logo" />
-                    <p><b>Nogira's Pumpkin Pepper Sauce Logo</b> <br>Spring 2024 Digital Art & Design class project<br><em>Made using Adobe Illustrator</em></p>
-                </div>
-            </div>
-
-            <div class="media-row">
-                <div class="media-item">
-                    <img src="images/design/poster-1.png" alt="It Goes Both Ways - Poster 1" style="border: .5px solid #202123; border-radius: 4px;"  />
-                    <p><b>It Goes Both Ways (1)</b> <br>Spring 2024 Digital Art & Design class project <br><em>Made using Adobe Illustrator</em></p>
-                </div>
-                <div class="media-item">
-                    <img src="images/design/poster-2.png" alt="It Goes Both Ways - Poster 2" style="border: .5px solid #202123; border-radius: 4px;"/>
-                    <p><b>It Goes Both Ways (2)</b> <br>Spring 2024 Digital Art & Design class project <br><em>Made using Adobe Illustrator</em></p>
-                </div>
-            </div>
-
-            <div class="media-row">
-                <div class="media-item">
-                    <img src="images/design/collage.jpg" alt="Collage" />
-                    <p><b>Collage</b> <br>Spring 2024 Digital Art & Design class project <br><em>Made using Adobe Illustrator</em></p>
-                </div>
-                <div class="media-item">
-                    <img src="images/design/self-portrait.png" alt="Self Portrait" />
-                    <p><b>Self-portrait</b> <br>Spring 2024 Digital Art & Design class project <br><em>Made using Adobe Illustrator</em></p>
-                </div>
-            </div>
-
-            <div class="media-row">
-                <div class="media-item">
-                    <img src="images/design/trip.png" alt="Tryptich" />
-                    <p><b>Tryptich</b> <br>Summer 2025 Digital Art & Design class project <br><em>Made using Adobe Illustrator</em></p>
-                </div>
-            </div>
-
-            <div class="media-row">
-                <div class="media-item">
-                    <img src="images/design/wild-leaf.jpg" alt="Wilf Leaf Co." />
-                    <p><b>Wild Leaf Co. Logo Design</b> <br>Summer 2025 personal project <br><em>Made using Figma</em></p>
-                </div>
-            </div>
-
-        </section> -->
-
+        <a href="#" class="back-to-top">↑ Back to Top</a>
     </div>
 
     <footer>
         &copy; 2025 Lexi Randt. All rights reserved.
     </footer>
 
+
+    <div class="lightbox" id="lightbox">
+        <span class="close">&times;</span>
+        <img class="lightbox-img" src="" alt="Full-size image" />
+    </div>
+    <script>
+        const lightbox = document.getElementById('lightbox');
+        const lightboxImg = lightbox.querySelector('.lightbox-img');
+        const closeBtn = lightbox.querySelector('.close');
+
+        // Add click listener to all media-block images
+        document.querySelectorAll('.media-block img').forEach(img => {
+            img.classList.add('lightbox-trigger');
+            img.addEventListener('click', () => {
+                lightboxImg.src = img.src;
+                lightbox.style.display = 'flex';
+            });
+        });
+
+        // Close lightbox on close button click
+        closeBtn.addEventListener('click', () => {
+            lightbox.style.display = 'none';
+            lightboxImg.src = '';
+        });
+
+        // Close lightbox if background is clicked
+        lightbox.addEventListener('click', e => {
+            if (e.target === lightbox) {
+                lightbox.style.display = 'none';
+                lightboxImg.src = '';
+            }
+        });
+    </script>
 </body>
 
 </html>
