updated contact page text

--- a/contact.html
+++ b/contact.html
@@ -38,10 +38,14 @@
 
     <main class="main-content">
         <br>
-        <h2>Let’s make something great together!</h2>
-        <p>
-            I’m currently open to new projects and commissions.<br>
-            Reach out—I'd love to hear from you!
+        <h2 style="font-size: 3rem;">I'm currently accepting new projects and commissions!</h2>
+        <hr class="section-divider">
+        <p style="font-size: 2rem;">
+            Whether you're looking for photos, a custom portrait
+            of your furry best friend, or branding design, I'm all ears.<br>
+
+            Have something else in mind? I’m open to ideas.
+            <br><b>Reach out—<em>I’d love to hear from you!</em></b>
         </p>
 
         <div class="contact-container">
@@ -79,7 +83,7 @@
                 </form>
             </div>
 
-            
+
         </div>
     </main>
 
