--- a/sbi.html
+++ b/sbi.html
@@ -53,19 +53,19 @@
                 <img class="lightbox-trigger" src="images/sbi/aqua-vitae.jpg" alt="Tasting Photo 2" />
             </div>
             <div class="photo">
-                <img class="lightbox-trigger" src="images/sbi/pretty.jpg" alt="Tasting Photo 3" />
+                <img class="lightbox-trigger" src="images/sbi/pretty.JPG" alt="Tasting Photo 3" />
             </div>
             <div class="photo">
                 <img class="lightbox-trigger" src="images/sbi/swirl.JPG" alt="Tasting Photo 4" />
             </div>
             <div class="photo">
-                <img class="lightbox-trigger" src="images/sbi/jeremy.jpg" alt="Tasting Photo 5" />
+                <img class="lightbox-trigger" src="images/sbi/jeremy.JPG" alt="Tasting Photo 5" />
             </div>
             <div class="photo">
                 <img class="lightbox-trigger" src="images/sbi/tito.JPG" alt="Tasting Photo 6" />
             </div>
             <div class="photo">
-                <img class="lightbox-trigger" src="images/sbi/tiki.jpg" alt="Tasting Photo 7" />
+                <img class="lightbox-trigger" src="images/sbi/tiki.JPG" alt="Tasting Photo 7" />
             </div>
             <div class="photo">
                 <img class="lightbox-trigger" src="images/sbi/cheese.jpg" alt="Tasting Photo 8" />
