--- a/pocket-heroes.html
+++ b/pocket-heroes.html
@@ -36,10 +36,10 @@
     </nav>
 
     <div class="main">
-        <h2>Spring 2025 Graphic Design Course</h2>
         <br>
+        <h1>Pocket Heroes</h1>
         <p>
-            Over the semester, I created a concept company called Pocket Heroes and developed its full brand identity.
+            <em>Spring 2025 Graphic Design Course</em><br><br>Over the semester, I created a concept company called Pocket Heroes and developed its full brand identity.
             This included designing the logo, choosing typography, creating mockups, and putting together the final
             brand guidelines.
         </p>
