--- a/resume.html
+++ b/resume.html
@@ -38,7 +38,7 @@
     <div class="main">
 
         <div class="pdf-container">
-            <iframe src="images/resume.pdf" type="application/pdf" frameborder="0"></iframe>
+            <iframe src="images/randt-resume.pdf" type="application/pdf" frameborder="0"></iframe>
         </div>
 
 
