added logo and made website changes

--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,9 @@
 
     <nav class="navbar">
         <div class="logo">
-            <a href="index.html">LR</a>
+            <a href="index.html">
+                <img src="images/lr-logo-white.png" alt="Your Logo" class="logo-img">
+            </a>
         </div>
         <div class="nav-links">
             <a href="index.html">Home</a>
@@ -37,23 +39,14 @@
     </nav>
 
     <main class="main-content">
-        <br>
-        <h2 style="font-size: 3rem;">I'm currently accepting new projects and commissions!</h2>
-        <hr class="section-divider">
-        <p style="font-size: 2rem;">
-            Whether you're looking for photos, a custom portrait
-            of your furry best friend, or branding design, I'm all ears.<br>
+        
 
-            Have something else in mind? I’m open to ideas.
-            <br><b>Reach out—<em>I’d love to hear from you!</em></b>
-        </p>
 
         <div class="contact-container">
-
-            <div class="photo-container">
-                <img src="images/headshot1.JPG" alt="Photo of Lexi" class="home-photo" />
-            </div>
             <div class="form-section">
+                <div class="photo-container">
+                    <img src="images/profile-pic.png" alt="Photo of Lexi" class="home-photo" style="box-shadow: none;" />
+                </div>
                 <form action="https://formspree.io/f/xovdwzqe" method="POST">
                     <div class="name-fields">
                         <div class="input-group">
@@ -83,6 +76,25 @@
                 </form>
             </div>
 
+            <div class="intro-section">
+                <h2 style="font-size: 2rem; color: #202123">I'm currently accepting new projects and commissions!</h2>
+
+                <hr class="section-divider">
+
+                <p style="font-family: Abril Fatface; font-size: 3rem; color:grey"><em>I can do a lot!</em></p>
+                <p style="font-size: 1.75rem;">
+                    - Photography -<br>
+                    - Graphic Design -<br>
+                    - Logo & Branding -<br>
+                    - Custom Pet Portraits! -
+                    <hr class="section-divider">
+                    <br><br>
+                </p>
+                <p style="font-size: 1.4rem;" >
+                    Have something else in mind? <br> I’m open to ideas.<br>
+                    <b>Reach out—<em>I’d love to hear from you!</em></b>
+                </p>
+            </div>
 
         </div>
     </main>
