--- a/fine-art.html
+++ b/fine-art.html
@@ -19,7 +19,9 @@
 
     <nav class="navbar">
         <div class="logo">
-            <a href="index.html">LR</a>
+            <a href="index.html">
+                <img src="images/lr-logo-white.png" alt="Your Logo" class="logo-img">
+            </a>
         </div>
         <div class="nav-links">
             <a href="index.html">Home</a>
