--- a/index.html
+++ b/index.html
@@ -10,13 +10,21 @@
     <link rel="stylesheet" href="css/navbar.css" />
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="script.js" />
+    <link rel="icon" href="images/favicon.png" type="png">
+    <meta property="og:title" content="Lexi Randt">
+    <meta property="og:description" content="Student, Graphic Designer & Photographer Portfolio Website">
+    <meta property="og:image" content="https://lexirandt.com/images/lr-logo-black.png">
+    <meta property="og:url" content="https://lexirandt.com/">
+    <meta name="twitter:card" content="summary_large_image">
 </head>
 
 <body>
 
     <nav class="navbar">
         <div class="logo">
-            <a href="#">Lexi Randt</a>
+            <a href="index.html">
+                <img src="images/lr-logo-white.png" alt="Your Logo" class="logo-img">
+            </a>
         </div>
         <div class="nav-links">
             <a href="index.html">Home</a>
@@ -91,7 +99,7 @@
             </div>
         </div>
 
-        
+
 
     </div>
 
