--- a/symposium.html
+++ b/symposium.html
@@ -15,7 +15,9 @@
 <body>
     <nav class="navbar">
         <div class="logo">
-            <a href="#">LR</a>
+            <a href="index.html">
+                <img src="images/lr-logo-white.png" alt="Your Logo" class="logo-img">
+            </a>
         </div>
         <div class="nav-links">
             <a href="index.html">Home</a>
