fixed mobile layout on certain pages & navbar scaling & other changes

--- a/sbi.html
+++ b/sbi.html
@@ -79,8 +79,15 @@
 
             <div class="media-block">
                 <img class="lightbox-trigger" src="images/sbi/jar-label.png" alt="Honey Jar Label Design"
-                    style="max-width: 600px;" />
+                    style="max-width: 100%; width: 100%; height: auto; display: block; margin: 0 auto;" />
                 <p><b>Honey Jar Label</b><br><em>Made using Figma</em></p>
+            </div>
+            <br><br>
+
+            <div class="media-block">
+                <img class="lightbox-trigger" src="images/sbi/balm-label.png" alt="Lip Balm Jar Label Design"
+                    style="max-width: 100%; width: 100%; height: auto; display: block; margin: 0 auto;" />
+                <p><b>Lip Balm Jar Label</b><br><em>Made using Figma</em></p>
             </div>
             <br><br>
 
