updated wording on  certain pages

--- a/alexcarnival.html
+++ b/alexcarnival.html
@@ -40,11 +40,12 @@
     <div class="main">
 
         <h1>Alex & Carnival Brand Guidelines</h1>
-        <p>This is a personal project I made over the Summer of 2025!</p>
+        <p>This is a personal project I made over the Summer of 2025 for a concept jewelry company!</p>
 
         <div class="pdf-container">
             <iframe src="images/acbg.pdf" type="application/pdf" frameborder="0"></iframe>
         </div>
+        
 
         <br><br><p><em>Made using Figma</em></p>
 
