--- a/fine-art.html
+++ b/fine-art.html
@@ -50,7 +50,7 @@
 
     <div class="main">
         <p>
-            Here is a collection of some course projects and personal work.
+            Below is a collection of some fine art course projects and personal work!
         </p>
 
         <section class="media-gallery-centered">
