--- a/graphic-design.html
+++ b/graphic-design.html
@@ -56,7 +56,7 @@
 
             <div class="media-block">
                 <img src="images/design/wild-leaf.jpg" alt="Wilf Leaf Co." />
-                <p><b>Wild Leaf Co. Logo Design</b> <br>Summer 2025 personal project <br><em>Made using Figma</em></p>
+                <p><b>Wild Leaf Co. Logo Design</b> <br>Summer 2025 personal project <br><em>Made with Figma</em></p>
             </div>
 
             <hr class="section-divider">
@@ -71,7 +71,7 @@
 
             <div class="media-block">
                 <img src="images/design/Sebastian.jpg" alt="Sebastian 06/25" class="vertical" />
-                <p><b>Sebastian </b><br>Digital Drawing - 2025<br><em>Made using Procreate</em></p>
+                <p><b>Sebastian </b><br>Digital Drawing - 2025<br><em>Made with Procreate</em></p>
             </div>
 
             <hr class="section-divider">
@@ -120,7 +120,7 @@
 
             <div class="media-block">
                 <img src="images/design/self-portrait.png" alt="Self Portrait" class="vertical" />
-                <p><b>Self-portrait</b> <br>Digital Art & Design course, Spring 2024 <br><em>Made using Adobe
+                <p><b>Self-portrait</b> <br>Digital Art & Design course, Spring 2024 <br><em>Made with Adobe
                         Illustrator</em></p>
             </div>
 
@@ -128,7 +128,7 @@
 
             <div class="media-block">
                 <img src="images/design/trip.png" alt="Tryptich" />
-                <p><b>Tryptich</b> <br>Digital Art & Design course, Spring 2024 <br><em>Made using Adobe
+                <p><b>Tryptich</b> <br>Digital Art & Design course, Spring 2024 <br><em>Made with Adobe
                         Illustrator</em></p>
             </div>
 
@@ -136,7 +136,7 @@
 
             <div class="media-block">
                 <img src="images/design/wallpaper.png" alt="Wallpaper" />
-                <p><b>Wallpaper Pattern Design</b> <br>Digital Art & Design course, Spring 2024 <br><em>Made using
+                <p><b>Wallpaper Pattern Design</b> <br>Digital Art & Design course, Spring 2024 <br><em>Made with
                         Adobe
                         Illustrator</em></p>
             </div>
@@ -145,7 +145,7 @@
 
             <div class="media-block">
                 <img src="images/design/collage.jpg" alt="Collage" class="vertical" />
-                <p><b>Collage</b> <br>Digital Art & Design course, Spring 2024 <br><em>Made using Adobe
+                <p><b>Collage</b> <br>Digital Art & Design course, Spring 2024 <br><em>Made with Adobe
                         Illustrator</em></p>
             </div>
 
@@ -153,7 +153,7 @@
 
             <div class="media-block">
                 <img src="images/design/margot-robbie.PNG" alt="Margot Robbie" />
-                <p><b>Margot Robbie</b> <br>2022 Graphic Design Project <br><em>Made using Adobe
+                <p><b>Margot Robbie</b> <br>2022 Graphic Design Project <br><em>Made with Adobe
                         Illustrator</em></p>
             </div>
 
@@ -161,14 +161,14 @@
 
             <div class="media-block">
                 <img src="images/design/an.jpg" alt="Untitled Digital Drawing " />
-                <p><b>Untitled</b> <br>Digital Drawing - 2022<br><em>Made using Procreate</em></p>
+                <p><b>Untitled</b> <br>Digital Drawing - 2022<br><em>Made with Procreate</em></p>
             </div>
 
             <hr class="section-divider">
 
             <div class="media-block">
                 <img src="images/design/turtle-whale.jpg" alt="Turtle&Whale Digital Drawing" />
-                <p><b>Whale with Shell</b> <br>Digital drawing - 2022 <br><em>Made using
+                <p><b>Whale with Shell</b> <br>Digital drawing - 2022 <br><em>Made with
                         Procreate</em></p>
             </div>
 
