--- a/photography.html
+++ b/photography.html
@@ -90,8 +90,8 @@
     </div> -->
 
     <div class="main">
-        <p>A collection of images from my travels and photography courses — taken with both iPhone and DSLR. I enjoy
-            capturing everyday moments, and finding beauty in unexpected places. :)<br><em>Click any photo to view it larger.</em></p>
+        <p>Below is a collection of images from my travels and photography courses — taken with both iPhone and DSLR. 
+            I like to find beauty in unexpected places. :)<br><em>Click any photo to view it larger.</em></p>
 
         <hr class="section-divider">
 
@@ -102,28 +102,28 @@
         <div class="photo-gallery">
             <figure>
                 <img src="images/photo/bw/mexico-3-23-22.jpeg" alt="Photo by Lexi Randt">
-                <figcaption><em>Mexico 3/22</em></figcaption>
+                <figcaption><em>Mexico</em></figcaption>
                 <img src="images/photo/bw/Kujalleq-7-8-23.jpeg" alt="Photo by Lexi Randt">
-                <figcaption> <em>Kujalleq 7/23</em></figcaption>
+                <figcaption> <em>Kujalleq</em></figcaption>
                 <img src="images/photo/bw/Isafjorour2-7-6-23.jpeg" alt="Photo by Lexi Randt">
-                <figcaption> <em>Isafjorour 7/23</em></figcaption>
+                <figcaption> <em>Isafjorour</em></figcaption>
                 <img src="images/photo/bw/Greenland-iceburg-7-8-23.jpeg" alt="Photo by Lexi Randt">
-                <figcaption> <em>Greenland Iceburg 7/23</em></figcaption>
+                <figcaption> <em>Greenland Iceburg</em></figcaption>
                 <img src="images/photo/stairs/stairs16.jpg" alt="Photo by Lexi Randt">
                 <figcaption> <em>Million Dollar Staircase</em></figcaption>
             </figure>
             <figure>
                 <img src="images/photo/bw/mountaineers-cemetery-zermatt-3-16-23.jpeg"
                     alt="Photo by Lexi Randt">
-                <figcaption> Mountaineer's Cemetary, Zermatt 3/23</figcaption>
+                <figcaption> Mountaineer's Cemetary, Zermatt</figcaption>
                 <img src="images/photo/bw/gateway-arch-national-park2-16-21.jpeg"
                     alt="Photo by Lexi Randt">
-                <figcaption> Gateway Arch 2/21</figcaption>
+                <figcaption> Gateway Arch </figcaption>
                 <img src="images/photo/bw/iceland-7-6-23.jpeg" alt="Photo by Lexi Randt">
-                <figcaption> Iceland Mountain 7/23</figcaption>
+                <figcaption> Iceland Mountain </figcaption>
                 <img src="images/photo/bw/Veytaux-Municipality-Switzerland-3-19-23.jpeg"
                     alt="Photo by Lexi Randt">
-                <figcaption> Veytaux Municipality, Switzerland 3/23</figcaption>
+                <figcaption> Veytaux Municipality, Switzerland </figcaption>
 
                 <img src="images/photo/bw/horse.heic" alt="Photo by Lexi Randt">
                 <figcaption> Albany, NY</figcaption>
@@ -132,14 +132,14 @@
 
             <figure>
                 <img src="images/photo/bw/Fossholl-Iceland-7-5-23.jpeg" alt="Photo by Lexi Randt">
-                <figcaption> Fossholl, Iceland 7/23</figcaption>
+                <figcaption> Fossholl, Iceland</figcaption>
                 <img src="images/photo/bw/iceland-7-3-23.jpeg" alt="Photo by Lexi Randt">
                 <figcaption> Iceland 7/23</figcaption>
                 <img src="images/photo/bw/Gries-im-Sellrain-Austria-2-20-24.jpeg"
                     alt="Photo by Lexi Randt">
-                <figcaption> Gries im Sellrain, Austria 2/24</figcaption>
+                <figcaption> Gries im Sellrain, Austria </figcaption>
                 <img src="images/photo/bw/Kematen-Austria-2-2-24.jpeg" alt="Photo by Lexi Randt">
-                <figcaption> Kematen, Austria 2/24</figcaption>
+                <figcaption> Kematen, Austria</figcaption>
 
             </figure>
 
