--- a/symposium.html
+++ b/symposium.html
@@ -38,7 +38,7 @@
     </nav>
 
     <section class="hero">
-        <img src="images/ls-center.jpeg" alt="Whale with Shell">
+        <img src="images/ls-center.jpeg" alt="Photo of Laudato Si' Center for Integral Ecology">
         <div class="hero-overlay">
             <h1 class="hero-title">Laudato Si'</h1>
         </div>
