updated description to "LR Portfolio Website"

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="script.js" />
     <link rel="icon" href="images/favicon.png" type="png">
     <meta property="og:title" content="Lexi Randt">
-    <meta property="og:description" content="Student, Graphic Designer & Photographer Portfolio Website">
+    <meta property="og:description" content="Lexi Randt Portfolio Website">
     <meta property="og:image" content="https://lexirandt.com/images/lr-logo-black.png">
     <meta property="og:url" content="https://lexirandt.com/">
     <meta name="twitter:card" content="summary_large_image">
