--- a/fine-art.html
+++ b/fine-art.html
@@ -60,9 +60,12 @@
                 <p><b>"Electric Circus" - Bad Suns</b><br><em>Mixed Media on Matte Poster Paper, 14x18"</em><br>2024</p>
             </div>
 
+            <hr class="section-divider">
+
             <div class="media-block">
-                <img class="lightbox-trigger" src="images/fine-art/beach-painting.jpg" alt="Pink Beach Painting" />
-                <p><b>Pink Sand</b><br><em>Acrylic on Canvas</em><br>2023</p>
+                <img class="lightbox-trigger" src="images/fine-art/Untitled.JPG" alt="Untitled Painting"
+                    class="vertical" />
+                <p><b>Elysian</b><br><em>Acrylic Painting on Canvas</em><br>2023</p>
             </div>
 
             <hr class="section-divider">
@@ -114,15 +117,14 @@
             <div class="media-block">
                 <img class="lightbox-trigger" src="images/fine-art/untitled.PNG" alt="Untitled Drawing"
                     class="vertical" />
-                <p><b>"Untitled" Drawing</b><br><em>Lead Pencil on Paper</em><br>2022</p>
+                    <p><b>Untitled</b><br><em>Lead Pencil on Paper</em><br>2022</p>
             </div>
 
             <hr class="section-divider">
 
             <div class="media-block">
-                <img class="lightbox-trigger" src="images/fine-art/Untitled.JPG" alt="Untitled Painting"
-                    class="vertical" />
-                <p><b>"Untitled" Painting</b><br><em>Acrylic Painting on Canvas</em><br>2023</p>
+                <img class="lightbox-trigger" src="images/fine-art/beach-painting.jpg" alt="Pink Beach Painting" />
+                <p><b>Pink Sand</b><br><em>Acrylic on Canvas</em><br>2023</p>
             </div>
 
             <hr class="section-divider">
