--- a/graphic-design.html
+++ b/graphic-design.html
@@ -49,7 +49,7 @@
         <p>
             Here is a collection of personal work and multimedia college course projects.
             <br>
-            <em>Click any image to view full screen.</em>
+            <em>Click any image to view larger.</em>
         </p>
 
         <section class="media-gallery-centered">
