--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <link rel="stylesheet" href="css/navbar.css" />
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="script.js" />
-    <link rel="icon" href="images/favicon.png" type="png">
+    <link rel="icon" href="images/LRfavicon.png" type="png">
     <meta property="og:title" content="Lexi Randt">
     <meta property="og:description" content="Lexi Randt Portfolio Website">
-    <meta property="og:image" content="https://lexirandt.com/images/lr-logo-black.png">
+    <meta property="og:image" content="https://lexirandt.com/images/LRfavicon.png">
     <meta property="og:url" content="https://lexirandt.com/">
     <meta name="twitter:card" content="summary_large_image">
 </head>
@@ -23,7 +23,7 @@
     <nav class="navbar">
         <div class="logo">
             <a href="index.html">
-                <img src="images/lr-logo-white.png" alt="Your Logo" class="logo-img">
+                <img src="images/lr-logo-white.png" alt="LR Logo" class="logo-img">
             </a>
         </div>
         <div class="nav-links">
@@ -98,7 +98,6 @@
                 </div>
             </div>
         </div>
-
 
 
     </div>
