--- a/photography.html
+++ b/photography.html
@@ -22,7 +22,7 @@
     <nav class="navbar">
         <div class="logo">
             <a href="index.html">
-                <img src="images/lr-logo-white.png" alt="Your Logo" class="logo-img">
+                <img src="images/lr-logo-white.png" alt="LR Logo" class="logo-img">
             </a>
         </div>
         <div class="nav-links">
