changed a pic on sbi page

--- a/sbi.html
+++ b/sbi.html
@@ -61,7 +61,7 @@
                 <img class="lightbox-trigger" src="images/sbi/swirl.JPG" alt="Tasting Photo 4" />
             </div>
             <div class="photo">
-                <img class="lightbox-trigger" src="images/sbi/jeremy.JPG" alt="Tasting Photo 5" />
+                <img class="lightbox-trigger" src="images/sbi/dan-pouring.JPG" alt="Tasting Photo 5" />
             </div>
             <div class="photo">
                 <img class="lightbox-trigger" src="images/sbi/tito.JPG" alt="Tasting Photo 6" />
