changed to Siena University

--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
         </div>
 
         <p>
-            Hi! I'm Lexi, a designer and student at Siena College studying computer science and multimedia design.
+            Hi! I'm Lexi, a graphic designer and student at Siena University studying computer science and multimedia design.
             Design is a big passion of mine, and I hope to incorporate it into my career.
             It drives me to create work that is clean, intentional, and thoughtfully crafted.
-            Welcome to my little corner on the internet!
+            Please, take a look around this website and check out the work I've made!
         </p>
 
         <h2>Browse my work:</h2>
